# compliance-tool

./: .codeclimate.yml  .editorconfig  .gitignore  .readthedocs.yaml  LICENSE  LICENSE.spdx  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: docs.yaml  gate.yaml
compliance_tool/: __main__.py  cli.py  list.py  remediate.py  scan.py
docs/: compliance-tool.1.rst  conf.py  index.rst
